# ConvertPdfToMarkdownWithCodex

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX_FINAL_ONEPAGE_PROMPT.md  CODEX_STARTER_PROMPT.md  PRD_pdf_to_markdown_converter.md  README.md  pyproject.toml  tasks.md
docs/: AGENT_SKILL_PORTABILITY.md  AGENT_SKILL_USAGE_GUIDE.md  DOCLING_INFORMED_EXTENSION_DESIGN.md  GUI_USER_GUIDE.md  MACOS_GUI_QUICKSTART.md  MCP_SERVER_DEVELOPMENT_SPEC.md  MCP_SERVER_INSTALL_USAGE_GUIDE.md  NEXT_QUALITY_IMPROVEMENT_PLAN.md  NVME_BASE_RAG_ADAPTER_DEVELOPMENT_SPEC.md  OCP_DATACENTER_NVME_SSD_RAG_ADAPTER_DEVELOPMENT_SPEC.md  OCP_SPEC_ANALYSIS_AGENT_HANDOFF.md  OUTPUT_SCHEMA.md  PDF2MD_MCP_NVME_BASE_STABILITY_DEVELOPMENT_SPEC.md  PDF2MD_NATIVE_MIGRATION_DEVELOPMENT_SPEC.md  QUALITY_IMPROVEMENT_DEVELOPMENT_SPECS.md  QUALITY_IMPROVEMENT_IMPLEMENTED_SPECS.md  QUALITY_SCORECARD.md  RAG_INDEXER_INTEGRATION_RECIPES.md  SSD_VERIFICATION_AGENT_PDF2MD_VISUAL_RAG_HANDOFF_SPEC.md  VISUAL_TECHNICAL_SPEC_RAG_DEVELOPMENT_SPEC.md  WINDOWS_A_TO_Z_GUIDE.md  WINDOWS_INSTALL_RUN_QUICKSTART.md  rag_calibration_profile.example.json
pdf2md/: __init__.py  __main__.py  batch_runner.py  cli.py  config.py  constants.py  document_ir.py  gui.py  gui_help.py  gui_i18n.py  gui_layout.py  gui_presets.py  gui_profiles.py  gui_runner.py  gui_state.py  gui_support.py  mcp_server.py  models.py  output_writers.py  pipeline.py  preflight.py  rag_profiles.py  reporting.py  table_quality.py
scripts/: analyze_corpus_evidence_pack.py  benchmark_conversion.py  benchmark_docling_comparison.py  benchmark_gui_cli_parity.py  build_requirement_impact_review_pack.py  check_ocr_runtime.py  compare_corpus_evidence_packs.py  create_gui_support_bundle.py  evaluate_figure_descriptions.py  export_output_schema.py  inspect_wheel_contract.py  install_agent_skill_pack.py  plan_large_spec_conversion.py  probe_ocr_backends.py  run_batch_folder_windows.bat  run_batch_folder_windows.ps1  run_corpus_eval.py  run_gui_cli_parity.py  run_gui_smoke_evidence.py  run_preset_eval.py  (+17 more)
(+312 files in other folders)
