[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2md"
version = "0.1.0"
description = "Reliable PDF to Markdown converter CLI/library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=4.2.0",
  "pdfplumber>=0.11.0",
  "pydantic>=2.7.0",
  "pillow>=10.0.0",
  "pytesseract>=0.3.10",
  "pypdfium2>=4.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
pdf2md = "pdf2md.cli:main"

[tool.setuptools]
packages = ["pdf2md", "pdf2md.extractors", "pdf2md.serializers", "pdf2md.utils", "pdf2md.detectors"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
