[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2md"
version = "0.1.0"
description = "Reliable PDF to Markdown converter CLI/library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=4.2.0",
  "pdfplumber>=0.11.0",
  "pydantic>=2.7.0",
  "pillow>=10.0.0",
  "pytesseract>=0.3.10",
  "pypdfium2>=4.20.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pip-audit>=2.7.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "wheel>=0.43.0",
]

[project.scripts]
pdf2md = "pdf2md.cli:main"
pdf2md-gui = "pdf2md.gui:main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["pdf2md*"]

[tool.setuptools.package-data]
"pdf2md" = ["py.typed"]
"pdf2md.resources" = ["GUI_USER_GUIDE.md"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
  ".venv",
  ".venv311",
  ".venv314",
  "build",
  "dist",
  "output",
  "*_output",
  "pdf",
]

[tool.ruff.lint]
select = [
  "E9",
  "F63",
  "F7",
  "F82",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
